<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include"
        layout="@layout/entry_listitem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/prev_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/previous"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/next"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

    <TextView
        android:id="@+id/shower_vol_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/shower_lbl"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/toilet_vol_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/toilet_lbl"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shower_vol_lbl" />

    <TextView
        android:id="@+id/hygline_vol_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hygiene_lbl"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="@+id/toilet_vol_lbl"
        app:layout_constraintTop_toBottomOf="@+id/toilet_vol_lbl" />

    <TextView
        android:id="@+id/shower_vol_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/shower_vol_lbl"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:text="22L" />

    <TextView
        android:id="@+id/toilet_vol_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="@+id/shower_vol_tv"
        app:layout_constraintTop_toBottomOf="@+id/shower_vol_tv"
        tools:text="13L" />

    <TextView
        android:id="@+id/hygine_vol_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="@+id/toilet_vol_tv"
        app:layout_constraintTop_toBottomOf="@+id/toilet_vol_tv"
        tools:text="3L" />

    <TextView
        android:id="@+id/laundry_vol_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/laundry_lbl"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="@+id/hygline_vol_lbl"
        app:layout_constraintTop_toBottomOf="@+id/hygline_vol_lbl" />

    <TextView
        android:id="@+id/laundry_vol_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="@+id/hygine_vol_tv"
        app:layout_constraintTop_toBottomOf="@+id/hygine_vol_tv"
        tools:text="5L" />

    <TextView
        android:id="@+id/dishes_vol_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dishes_lbl"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="@+id/laundry_vol_lbl"
        app:layout_constraintTop_toBottomOf="@+id/laundry_vol_lbl" />

    <TextView
        android:id="@+id/dishes_vol_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="@+id/laundry_vol_tv"
        app:layout_constraintTop_toBottomOf="@+id/laundry_vol_tv"
        tools:text="4L" />

    <TextView
        android:id="@+id/cooking_vol_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cooking_lbl"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="@+id/dishes_vol_lbl"
        app:layout_constraintTop_toBottomOf="@+id/dishes_vol_lbl" />

    <TextView
        android:id="@+id/cooking_vol_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="@+id/dishes_vol_tv"
        app:layout_constraintTop_toBottomOf="@+id/dishes_vol_tv"
        tools:text="6L" />

    <TextView
        android:id="@+id/cleaning_vol_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cleaning_lbl"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="@+id/cooking_vol_lbl"
        app:layout_constraintTop_toBottomOf="@+id/cooking_vol_lbl" />

    <TextView
        android:id="@+id/cleaning_vol_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="@+id/cooking_vol_tv"
        app:layout_constraintTop_toBottomOf="@+id/cooking_vol_tv"
        tools:text="22L" />

</android.support.constraint.ConstraintLayout>